# rust_haz_genesis

./: Cargo.toml  build.rs
neoscrypt/: neoscrypt.c
src/: main.rs
