[package]
name = "rust_haz_genesis"
version = "0.1.0"
authors = ["Dominik Spicher <dominik.spicher@inacta.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitcoin = "0.23.0"
libc = "*"
hex = "*"


[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"
